--- a/lesson_001/index.html
+++ b/lesson_001/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random user generator</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div id="app">
+        <img  :class="gender"  v-bind:src="image" :alt="`${firstName} ${lastName}`"/>
+        <h1>{{firstName}} {{lastName}}</h1>
+        <h3>{{email}}</h3>
+        <button :class="gender" v-on:click="getUser">Generate Random User</button>
+    </div>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
